--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
