--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
