--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
     "zustand": "^4.5.4"
   },
