--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
     "@mui/joy": "^5.0.0-beta.48",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.5.2",
