--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/joy": "^5.0.0-beta.48",
+    "argon2": "^0.40.3",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
