--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/joy": "^5.0.0-beta.48",
     "@react-pdf/renderer": "^3.4.4",
+    "date-fns": "^3.6.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "react": "^18",
