--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.6.0",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
+    "random-avatar-generator": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
